CVS code -

GNU nano 2.0.3 - 2007.01.29
- General:
	- Miscellaneous comment fixes. (DLR)
	- More int -> bool conversions. (DLR)
	- Don't install the nanorc manpages or generate their HTML
	  versions if nano is built without nanorc support.  Changes to
	  configure.ac, doc/man/Makefile.am, and doc/man/fr/Makefile.am.
	  (DLR)
	- Simplify the commands that generate HTML documentation in
	  order to remove unnecessary usage of cat.  Changes to
	  doc/man/Makefile.am, doc/man/fr/Makefile.am, and
	  doc/texinfo/Makefile.am. (DLR)
- files.c:
  do_writeout()
	- When setting retval to the return value of
	  write_(marked_)?file(), use the "?" operator instead of an
	  if/else clause. (DLR)
  is_dir()
	- Don't assign dirptr's value using buf until we've asserted
	  that buf isn't NULL. (DLR)
	- Remove unneeded assert. (DLR)
- proto.h:
	- Add missing is_dir() prototype. (DLR)
- search.c:
  regexp_init()
	- Don't assign rc's value via regcomp() until we've asserted
	  that regexp_compiled is FALSE. (DLR)
- text.c:
  do_alt_speller()
	- Rename variable altspell_error to alt_spell_error, for
	  consistency. (DLR)
  do_spell()
	- Rename variable i to status, for clarity. (DLR)
- winio.c:
  do_credits()
	- Update the last copyright notice to include 2007. (DLR)
- Makefile.am:
	- Add README.CVS to EXTRA_DIST, so that nano's CVS checkout
	  instructions aren't only available in its CVS snapshots. (DLR)
- README:
	- Add more miscellaneous cosmetic fixes. (DLR)
- README.CVS:
	- Update for the 2.0 branch of nano. (DLR)
- NEWS:
	- Formatting fix. (DLR)
- m4/glib-2.0.m4:
	- Import the latest version of this file from glib 2.10.3. (DLR)
- doc/faq.html:
	- Update section 4.1 to describe how to open files with names
	  beginning with '+' at specified columns as well as lines.
	  (DLR)
- doc/man/fr/Makefile.am:
	- Set mandir before setting man_MANS, to more closely match
	  doc/man/Makefile.am. (DLR)
- doc/syntax/python.nanorc:
	- Improve string highlighting regexes. (Mike Frysinger)
