@@ -1,4 +1,8 @@
 CVS code -
+- doc/faq.html:
+	- Update email address. (DLR)
+- AUTHORS:
+	- Update email address. (DLR)
 
 GNU nano 2.0.3 - 2007.01.29
 - General:
